--- a/Loany/Views/NewClientPage.xaml
+++ b/Loany/Views/NewClientPage.xaml
@@ -1,10 +1,16 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:mvvm="clr-namespace:MvvmHelpers;assembly=MvvmHelpers"
              xmlns:model="clr-namespace:Loany.Models"
              xmlns:viewmodels="clr-namespace:Loany.ViewModels"
+             x:DataType="viewmodel:NewClientViewModel"
              x:Class="Loany.Views.NewClientPage">
+
+            <ContentPage.BindingContext>
+                <viewmodel:NewClientViewModel>
+            <ContentPage.BindingContext>
+
     <ContentPage.Content>
         <StackLayout>
             <Label 
